<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tips22</string>
    <string name="common_current_value">現在の値：</string>
    <string name="pref_name_checkbox">チェックボックス</string>
    <string name="pref_name_text">テキスト</string>
    <string name="pref_name_list">リスト</string>
    <string name="summary_checkbox_on">チェックボックスONです</string>
    <string name="summary_checkbox_off">チェックボックスOFFです</string>
    <string name="summary_text">入力した文字がここに表示されます</string>
    <string name="summary_list">リストで選んだ値がここに表示されます</string>
    <string name="dialogtitle_text">ここに文字を入力してください</string>
    <string name="dialogtitle_list">どれか１つを選んでください</string>
</resources>
